kubernetes/main/apps/authelia/authelia/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: authelia
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.k.04a.ca`)
      kind: Rule
      services:
        - name: authelia
          namespace: authelia
          port: 80
    - match: Host(`auth.t.04a.ca`)
      kind: Rule
      services:
        - name: authelia
          namespace: authelia
          port: 80
